# fun

./: .clang-format  CMakeLists.txt  Makefile  README.md
blah/: CMakeLists.txt  blah.c  blah.h
doc/: dev.txt
objc/: CMakeLists.txt  objc.c
src/: config.cpp  config.h  editorwidget.cpp  editorwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  version.cpp
test/: CMakeLists.txt  chess.cpp  chess.h  chess_test.cpp  socket.cpp  test1.cpp
